--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,6 @@
         <title>Contact Page</title>
     </head>
     <body>
-        Hello World!!
+        Hello World!! This is new change in Feature branch
     </body>
 </html>
